--- a/src/presentation/assets/styles/app.scss
+++ b/src/presentation/assets/styles/app.scss
@@ -16,6 +16,15 @@ a {
   @apply hover:text-gray-700;
 }
 
+.btn-active {
+  @apply text-gray-700 bg-primary-300 bg-opacity-30 rounded-xl;
+}
+
 .table :where(thead, tfoot) :where(th, td) {
   @apply bg-primary-50;
+}
+
+.rdrDefinedRangesWrapper
+{
+  display: none;
 }
